# lunasvg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build  meson_options.txt  svg2png.cpp
.github/: FUNDING.yml
.github/workflows/: ci.yml  main.yml
cmake/: FindCairo.cmake  Findplutovg.cmake  lunasvgConfig.cmake.in
example/: CMakeLists.txt  clock.cpp  svg2png.cpp
example/SDL2/: CMakeLists.txt  Makefile.js  README.md  load.js  lunaSVG_SDL2.cpp
example/WxWidgets/: CMakeLists.txt  README.md  lunaSVG_WX.cpp
example/X11/: CMakeLists.txt  README.md  lunaSVG_X11.cpp
example_nodeps/: CMakeLists.txt  stb_image_write.h  test.cpp
examples/: CMakeLists.txt  meson.build  svg2png.cpp
examples/win32/svg2ico/: svg2ico.cpp  svg2ico.h
include/: CMakeLists.txt  document.h  lunasvg.h  svgdocument.h  svgelement.h  svgelementiter.h  version.h.in
plutovg/: CMakeLists.txt  README.md  meson.build  meson_options.txt
plutovg/.github/: FUNDING.yml
plutovg/cmake/: plutovgConfig.cmake.in
plutovg/include/: plutovg.h
plutovg/source/: plutovg-blend.c  plutovg-canvas.c  plutovg-font.c  plutovg-ft-math.c  plutovg-ft-raster.c  plutovg-paint.c  plutovg-path.c  plutovg-private.h  plutovg-rasterize.c  plutovg-surface.c
source/: CMakeLists.txt  canvas.cpp  canvas.h  clippathelement.cpp  clippathelement.h  cssproperty.cpp  cssproperty.h  document.cpp  element.cpp  element.h  gelement.cpp  gelement.h  geometryelement.cpp  geometryelement.h  graphics.cpp  graphics.h  graphicselement.cpp  layoutcontext.cpp  layoutcontext.h  lunasvg.cpp  markerelement.cpp  markerelement.h  maskelement.cpp  maskelement.h  paintelement.cpp  paintelement.h  parser.cpp  parser.h  parserutils.h  property.cpp  property.h  rendercontext.cpp  rendercontext.h  resource.cpp  resource.h  stopelement.cpp  styledelement.cpp  styledelement.h  svgangle.cpp  svgangle.h  (+115 more)
source/backends/agg/: canvasimpl.cpp  canvasimpl.h
source/backends/cairo/: CMakeLists.txt  canvasimpl.cpp  canvasimpl.h
source/geometry/: CMakeLists.txt  affinetransform.cpp  affinetransform.h  bezier.cpp  bezier.h  dasher.cpp  dasher.h  flatteningpathiterator.cpp  flatteningpathiterator.h  font.cpp  font.h  line.h  path.cpp  path.h  pathiterator.cpp  pathiterator.h  pathutils.cpp  pathutils.h  point.h  rect.h
source/graphics/: CMakeLists.txt  canvas.cpp  canvas.h  canvasimpl.cpp  gradient.cpp  gradient.h  paint.cpp  paint.h  pattern.cpp  pattern.h  rgb.cpp  rgb.h  strokedata.cpp
source/graphics/agg/: CMakeLists.txt  canvasimpl.cpp  canvasimpl.h
source/graphics/agg/include/: CMakeLists.txt
source/graphics/agg/include/util/: CMakeLists.txt
source/graphics/agg/src/: CMakeLists.txt
source/graphics/cairo/: canvasimpl.cpp  canvasimpl.h
source/plutovg/: plutovg-blend.cpp  plutovg-dash.cpp  plutovg-ft-raster.cpp  plutovg-geometry.cpp  plutovg-paint.cpp  plutovg-private.h  plutovg-rle.cpp  plutovg.cpp  plutovg.h
source/properties/: CMakeLists.txt  cssproperty.cpp  cssproperty.h  svgcolor.cpp  svgenumeration.cpp  svgenumeration.h  svglength.cpp  svglengthlist.cpp  svglengthlist.h  svgnumber.cpp  svgnumber.h  svgnumberlist.cpp  svgnumberlist.h  svgpath.cpp  svgpoint.cpp  svgpointlist.cpp  svgpreserveaspectratio.h  svgpropertyutils.cpp  svgrect.cpp  svgstring.cpp  svgstring.h  svgstringlist.cpp  svgstringlist.h  svgtransform.cpp
subprojects/: plutovg.wrap
