add_subdirectory(geometry)
add_subdirectory(graphics)

target_sources(lunasvg 
PRIVATE
    "${CMAKE_CURRENT_LIST_DIR}/cssproperty.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgcolor.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgenumeration.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svglength.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svglengthlist.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgnumber.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgnumberlist.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgpath.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgpoint.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgpointlist.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgpreserveaspectratio.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgproperty.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgpropertyutils.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgrect.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgstring.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgstringlist.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgtransform.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgangle.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/rendercontext.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgdefselement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgdocument.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgdocumentimpl.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgelementimpl.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgelementhead.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgelementtail.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgelementtext.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgelementiter.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgelementutils.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgfittoviewbox.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svggeometryelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svggradientelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svggraphicselement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svglineargradientelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgpaintelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgparser.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svggelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgpathelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgpolyelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgpolygonelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgpolylineelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgradialgradientelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgrectelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgcircleelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgellipseelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svglineelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgrootelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgsvgelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgstopelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgstyledelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgurireference.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svguseelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgsymbolelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgpatternelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgmaskelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgclippathelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgsolidcolorelement.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/svgmarkerelement.cpp"
)

target_include_directories(lunasvg
PRIVATE
    "${CMAKE_CURRENT_LIST_DIR}"
)
